devel
-----

* BTS-266: When starting up a cluster without `--cluster.force-one-shard`, 
  creating a database and then restarting the cluster with the startup option
  `--cluster.force-one-shard` set to true, when the formerly created database
  has more than one shard, but the flag is set to true, this could lead to 
  arangosearch's analyzers to use optimizations that should not be used if not 
  in a single shard mode. For this not to happen, the verification of the 
  parameter being true as a condition to run optimizations was removed. 

* Removed CMake variable `ARANGODB_BITS`, which was only used in one place.

* Log information about follower state/apply progress in supervision job that
  organizes failover in active failover mode.

* Updated arangosync to v2.14.0.

* Updated ArangoDB Starter to 0.15.6.

* ES-1396: under some rare circumstances it was possible that background index
  creation missed some documents in case the documents were inserted after
  background index creation started and the corresponding WAL files with the
  inserts were already removed before background indexing caught up.

* Fixed the issue that the collection view search did not support selecting
  everything using Ctrl + A.

* BTS-413: Added more explanatory messages for when the user cannot see the
  statistics for a node in the UI when in cluster mode.

* Updated arangosync to v2.14.0-preview-6.

* Updated ArangoDB Starter to 0.15.6-preview-2.

* Fix coordinator segfault in AQL queries in which the query is invoked from
  within a JavaScript context (e.g. from Foxx or from the server's console
  mode) **and** the query has multiple coordinator snippets of which except
  the outermost one invokes a JavaScript function.
  Instead of crashing, coordinators will now respond with the exception 
  "no v8 context available to enter for current transaction context".
  For AQL queries that called one of the AQL functions `CALL` or `APPLY` with