@@ -88,6 +88,16 @@ int countSubstring(std::string const& str, std::string const& sub) {
 std::vector<std::string> dbsPath{"arango", "Plan", "DBServers"};
 std::vector<std::string> colPath{"arango", "Plan", "Collections"};
 
+namespace {
+void checkAlphabetic(std::map<ServerID, ServerID> const& matches) {
+  ASSERT_TRUE(matches.size() > 1);  // otherwise nonsensical test
+  // Check that the values are in alphabetically increasing order:
+  ASSERT_TRUE(std::is_sorted(
+      matches.begin(), matches.end(),
+      [](auto const& a, auto const& b) { return a.second < b.second; }));
+}
+}  // namespace
+
 class HotBackupOnCoordinators : public ::testing::Test {
  protected:
   HotBackupOnCoordinators() {
@@ -174,6 +184,7 @@ TEST_F(HotBackupOnCoordinators, test_first_and_last_dbserver_new) {
   arangodb::Result res = matchBackupServers(plan, dbServers, matches);
 
   ASSERT_EQ(matches.size(), 2);
+  ::checkAlphabetic(matches);
   ASSERT_TRUE(res.ok());
 }
 
@@ -192,6 +203,7 @@ TEST_F(HotBackupOnCoordinators, test_all_dbserver_new) {
   arangodb::Result res = matchBackupServers(plan, dbServers, matches);
 
   ASSERT_EQ(matches.size(), 3);
+  ::checkAlphabetic(matches);
   ASSERT_TRUE(res.ok());
 }
 
@@ -281,6 +293,7 @@ TEST_F(HotBackupOnCoordinators,
   arangodb::Result res = matchBackupServers(plan, dbServers, matches);
 
   ASSERT_TRUE(res.ok());
+  ::checkAlphabetic(matches);
 
   VPackBuilder newPlan;
   res = applyDBServerMatchesToPlan(plan, matches, newPlan);
@@ -310,6 +323,7 @@ TEST_F(HotBackupOnCoordinators,
   arangodb::Result res = matchBackupServers(plan, dbServers, matches);
 
   ASSERT_TRUE(res.ok());
+  ::checkAlphabetic(matches);
 
   VPackBuilder newPlan;
   res = applyDBServerMatchesToPlan(plan, matches, newPlan);
@@ -337,6 +351,7 @@ TEST_F(HotBackupOnCoordinators,
   arangodb::Result res = matchBackupServers(plan, dbServers, matches);
 
   ASSERT_TRUE(res.ok());
+  ::checkAlphabetic(matches);
 
   VPackBuilder newPlan;
   res = applyDBServerMatchesToPlan(plan, matches, newPlan);
