@@ -1,6 +1,9 @@
 devel
 -----
 
+* Fix bug in hotbackup download/restore to make sure no data is mixed up
+  between servers. This fixes a bug introduced in 3.10.
+
 * BTS-266: When starting up a cluster without `--cluster.force-one-shard`, 
   creating a database and then restarting the cluster with the startup option
   `--cluster.force-one-shard` set to true, when the formerly created database
